@@ -1,3 +1,3 @@
 <h1>Test</h1>
 
-${structure: wrapped_content}
+${structure: content}
