@@ -1,1 +1,1 @@
-${structure: wrapped_content}
+${structure: content}
