@@ -1,5 +1,5 @@
 <div style="margin-top: 60px;">
   <div class="container">
-    ${structure: wrapped_content}
+    ${structure: content}
   </div>
 </div>
